<resources>
    <string name="app_name">Audibook</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here…</string>
    <string name="audibook">Audibook</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="cancel_dialog">cancel</string>
    <string name="click_on_the_bottom_below_to_begin_creating_your_reminder">Click on the bottom below to begin creating your reminder</string>
    <string name="details">Details</string>
    <string name="todo">TODO</string>
    <string name="reminder">Reminder</string>
    <string name="tap_to_speak">Tap to Speak</string>
    <string name="create_schedule">Create Schedule</string>
    <string name="create_new_schedule">Create New Schedule</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="done">DONE</string>
    <string name="snooze_off">Snooze off</string>
    <string name="flashlight">Flashlight</string>
    <string name="_90_charging">90% Charging</string>
    <string name="input_here">Input here</string>
    <string name="hello">Hello</string>
    <string name="test_change">Test Change</string>
    <string name="your_mom">your mom</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Main Activity/Fragment -->
    <string name="empty_view_text">Press the Floating Action Button to add an alarm!</string>

    <!-- Edit Alarm Activity/Fragment -->
    <string name="time">Time</string>
    <string name="label">Reminder Title</string>
    <string name="days">Days</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="add_label_hint">Add a label!</string>
    <string name="update_complete">Changes Saved</string>
    <string name="update_failed">Update Failed</string>
    <string name="delete_complete">Alarm Deleted</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="delete_dialog_title">Confirm Delete Alarm</string>
    <string name="delete_dialog_content">Are you sure you would like to delete this alarm?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Edit Alarm Menu -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- Alarm Landing Page Activity/Fragment -->
    <string name="launch_main_activity">Launch Main Activity</string>
    <string name="dismiss">Dismiss</string>

    <!-- Days -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!-- Notification -->
    <string name="channel_name">Simple Alarms</string>
    <string name="set_schedule">Set Schedule</string>
    <string name="repeat">Repeat</string>
    <string name="m">M</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="th">Th</string>
    <string name="f">F</string>
    <string name="su">Su</string>
    <string name="title">(title)</string>
    <string name="color">color</string>
    <string name="convert">Convert</string>
    <string name="delete">delete</string>
</resources>