<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"
            android:text="@string/set_schedule"
            tools:text="Set Schedule"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="@string/label"
            tools:text="Reminder Title"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <EditText
            android:id="@+id/edit_alarm_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLength="15"
            android:textColor="@color/secondary_text"
            android:textStyle="italic"
            android:hint="(title)"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="@string/time"
            tools:text="Time"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <TimePicker
            android:id="@+id/edit_alarm_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:timePickerMode="spinner"
            tools:targetApi="lollipop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="Repeat"
            tools:text="Repeat"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <LinearLayout
            android:id="@+id/checkbox_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7">

            <com.zentech.audibook.view.DayViewCheckBox
                android:id="@+id/edit_alarm_sun"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/background_day_view"
                android:button="@null"
                android:gravity="center"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="S" />

            <com.zentech.audibook.view.DayViewCheckBox
                android:id="@+id/edit_alarm_mon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/background_day_view"
                android:button="@null"
                android:gravity="center"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="M" />


            <com.zentech.audibook.view.DayViewCheckBox
                android:id="@+id/edit_alarm_tues"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/background_day_view"
                android:button="@null"
                android:gravity="center"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="T" />

            <com.zentech.audibook.view.DayViewCheckBox
                android:id="@+id/edit_alarm_wed"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/background_day_view"
                android:button="@null"
                android:gravity="center"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="W" />

            <com.zentech.audibook.view.DayViewCheckBox
                android:id="@+id/edit_alarm_thurs"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/background_day_view"
                android:button="@null"
                android:gravity="center"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="T" />

            <com.zentech.audibook.view.DayViewCheckBox
                android:id="@+id/edit_alarm_fri"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/background_day_view"
                android:button="@null"
                android:gravity="center"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="F" />


            <com.zentech.audibook.view.DayViewCheckBox
                android:id="@+id/edit_alarm_sat"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/background_day_view"
                android:button="@null"
                android:gravity="center"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="S" />
        </LinearLayout>
    </LinearLayout>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/action_delete"
            android:background="@null"
            android:title="@string/action_delete"
            android:src="@drawable/ic_baseline_delete_forever_24"
            />
    </LinearLayout>

</ScrollView>